fix(list): prevent z-index overlapping problems by isolating the component

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,4 +1,3 @@
-@use '../../style/internal/z-index';
 @use '../../style/functions';
 @use '../../style/mixins';
 
@@ -8,6 +7,9 @@
 @use '@material/ripple';
 
 $list-border-radius: 0.375rem; // 6px
+$list--has-interactive-items--mdc-list-item--hover: 1;
+$list-static-actions-list: 1;
+$list-mdc-list-item: 0;
 
 /**
  * @prop --icon-background-color: Color to use for icon background when `badgeIcons=true`.
@@ -20,6 +22,7 @@ $list-border-radius: 0.375rem; // 6px
 
 :host(limel-list) {
     display: block;
+    isolation: isolate;
 }
 
 :host([hidden]) {
@@ -41,7 +44,7 @@ $list-border-radius: 0.375rem; // 6px
 
     .mdc-deprecated-list-item {
         box-sizing: border-box;
-        z-index: z-index.$list-mdc-list-item; // in Chrome on Windows, menus flicker when they have a scroll bar and user hovers on them. We may be able to remove this in future versions of Chrome. Kia 2021-May-12
+        z-index: $list-mdc-list-item; // in Chrome on Windows, menus flicker when they have a scroll bar and user hovers on them. We may be able to remove this in future versions of Chrome. Kia 2021-May-12
 
         &.mdc-deprecated-list-item--disabled {
             cursor: not-allowed;
@@ -230,7 +233,7 @@ $list-border-radius: 0.375rem; // 6px
             &:focus-visible {
                 box-shadow: var(--shadow-depth-8-focused);
                 border-radius: $list-border-radius;
-                z-index: z-index.$list--has-interactive-items--mdc-list-item--hover;
+                z-index: $list--has-interactive-items--mdc-list-item--hover;
 
                 &:before {
                     animation-duration: 0s !important;
